dvhop/model/errors.txt
n file included from ./ns3/object-base.h:23,
                 from ./ns3/object.h:29,
                 from ./ns3/node.h:26,
                 from ../src/dvhop/model/dvhop.h:5,
                 from ../src/dvhop/model/dvhop.cc:3:
./ns3/type-id.h: In instantiation of ‘static ns3::ObjectBase* ns3::TypeId::AddConstructor()::Maker::Create() [with T = ns3::dvhop::RoutingProtocol]’:
./ns3/type-id.h:659:3:   required from ‘ns3::TypeId ns3::TypeId::AddConstructor() [with T = ns3::dvhop::RoutingProtocol]’
../src/dvhop/model/dvhop.cc:32:45:   required from here
./ns3/type-id.h:656:27: error: invalid new-expression of abstract class type ‘ns3::dvhop::RoutingProtocol’
  656 |       ObjectBase * base = new T ();
      |                           ^~~~~~~~
In file included from ../src/dvhop/model/dvhop.cc:3:
../src/dvhop/model/dvhop.h:24:11: note:   because the following virtual functions are pure within ‘ns3::dvhop::RoutingProtocol’:
   24 |     class RoutingProtocol : public Ipv4RoutingProtocol{
      |           ^~~~~~~~~~~~~~~
In file included from ../src/dvhop/model/dvhop.h:8,
                 from ../src/dvhop/model/dvhop.cc:3:
./ns3/ipv4-routing-protocol.h:172:16: note: 	‘virtual void ns3::Ipv4RoutingProtocol::PrintRoutingTable(ns3::Ptr<ns3::OutputStreamWrapper>, ns3::Time::Unit) const’
  172 |   virtual void PrintRoutingTable (Ptr<OutputStreamWrapper> stream, Time::Unit unit = Time::S) const = 0;
      |                ^~~~~~~~~~~~~~~~~

